[package]
name = "ina219_rs"
description = "INA219 current/power monitor driver"
version = "0.5.1"
keywords = ["ina219", "driver", "i2c", "current", "no_std"]
repository = "https://github.com/sndnvaps/ina219"
authors = ["Scott Nelson <scott@scottnelson.co>","Samuel Freeman <admin@sndnvaps.com>"]
license = "MIT/Apache-2.0"

[dependencies]
embedded-hal = { version = "1.0.0" }
enum-iterator = "2.0.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = true
